--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ddbb14d4d1.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/images/gear.png">
     <link rel="stylesheet" href="styles/style.css">
     <title>Influencer Site</title>
 </head>
